--- a/CocktailCatalog/app/src/main/res/layout/activity_main.xml
+++ b/CocktailCatalog/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/kivi"
+        app:itemTextColor="@color/kivi"
         app:menu="@menu/menu" />
 </RelativeLayout>
