--- a/CocktailCatalog/app/src/main/res/menu/menu.xml
+++ b/CocktailCatalog/app/src/main/res/menu/menu.xml
@@ -2,13 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/searchDrinkFragment"
+        android:id="@+id/searchFragment"
         android:title="@string/search"
         android:icon="@drawable/ic_baseline_search_24"
         />
     <item
-        android:id="@+id/drinkListFragment"
-        android:title="@string/search"
-        android:icon="@drawable/ic_baseline_no_drinks_24"
+        android:id="@+id/addDrinkFragment"
+        android:title="@string/add"
+        android:icon="@drawable/ic_baseline_add_24"
+        />
+    <item
+        android:id="@+id/drinkHistoryFragment"
+        android:title="@string/history"
+        android:icon="@drawable/ic_baseline_history_24"
+        />
+    <item
+        android:id="@+id/favoriteDrinksFragment"
+        android:title="@string/favorite"
+        android:icon="@drawable/ic_baseline_favorite_border_24"
         />
 </menu>
