--- a/CocktailCatalog/app/src/main/res/layout/row_drinks.xml
+++ b/CocktailCatalog/app/src/main/res/layout/row_drinks.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp">
 
     <TextView
         android:id="@+id/textViewDrinkName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:background="@drawable/text_view_bg"
+        android:elevation="10dp"
+        android:padding="10dp"
+        android:shadowRadius="10"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="16dp" />
 </LinearLayout>
