--- a/CocktailCatalog/app/src/main/res/values/themes.xml
+++ b/CocktailCatalog/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">#3F403D</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="fontFamily">@font/nunito</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
