--- a/CocktailCatalog/app/src/main/res/layout/fragment_search.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.SearchFragment">
+    tools:context=".views.SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
