--- a/CocktailCatalog/app/src/main/res/navigation/navigation.xml
+++ b/CocktailCatalog/app/src/main/res/navigation/navigation.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/drinkHistoryFragment"
-        android:name="com.example.cocktailcatalog.View.DrinkHistoryFragment"
+        android:name="com.example.cocktailcatalog.views.DrinkHistoryFragment"
         android:label="drink_history_fragment"
         tools:layout="@layout/drink_history_fragment" />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.cocktailcatalog.View.SearchFragment"
+        android:name="com.example.cocktailcatalog.views.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" >
         <action
@@ -21,15 +21,15 @@
     </fragment>
     <fragment
         android:id="@+id/addDrinkFragment"
-        android:name="com.example.cocktailcatalog.View.AddDrinkFragment"
+        android:name="com.example.cocktailcatalog.views.AddDrinkFragment"
         android:label="AddDrinkFragment" />
     <fragment
         android:id="@+id/favoriteDrinksFragment"
-        android:name="com.example.cocktailcatalog.View.FavoriteDrinksFragment"
+        android:name="com.example.cocktailcatalog.views.FavoriteDrinksFragment"
         android:label="FavoriteDrinksFragment" />
     <fragment
         android:id="@+id/drinkDetailsFragment"
-        android:name="com.example.cocktailcatalog.View.DrinkDetailsFragment"
+        android:name="com.example.cocktailcatalog.views.DrinkDetailsFragment"
         android:label="DrinkDetailsFragment" >
         <action
             android:id="@+id/action_drinkDetailsFragment_to_searchFragment"
