Added icon, search by ingredient works.

--- a/CocktailCatalog/app/src/main/res/layout/fragment_search_by_ingredient.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_search_by_ingredient.xml
@@ -22,7 +22,8 @@
         android:id="@+id/recyclerViewIngredientListSearch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="10dp"
+        android:overScrollMode="ifContentScrolls"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,7 +32,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonSearch"
         android:layout_width="162dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
