--- a/CocktailCatalog/app/src/main/res/layout/row_ingredient.xml
+++ b/CocktailCatalog/app/src/main/res/layout/row_ingredient.xml
@@ -18,7 +18,7 @@
         android:textSize="16dp" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxSelectIngredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="#FFFFFF"
