--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
@@ -41,15 +41,23 @@
         app:layout_constraintStart_toStartOf="@+id/textViewNewDrinkTitle"
         app:layout_constraintTop_toBottomOf="@+id/textViewNewDrinkTitle" />
 
+    <Spinner
+        android:id="@+id/spinnerIngredients"
+        android:layout_width="252dp"
+        android:layout_height="38dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        app:layout_constraintStart_toStartOf="@+id/editTextNewDrinkName"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNewDrinkName" />
+
     <Button
         android:id="@+id/buttonAddDrinkToLocalDatabase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginBottom="88dp"
         android:text="add"
-        app:layout_constraintStart_toStartOf="@+id/editTextNewDrinkName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNewDrinkName" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
