--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
@@ -7,48 +7,59 @@
     tools:context=".views.AddDrinkFragment">
 
     <TextView
-        android:id="@+id/textViewNewDrinkTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Add new drink"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#FFFFFF"
-        android:textSize="27sp"/>
-
-    <TextView
         android:id="@+id/textViewNewDrinkNameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:text="Name"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNewDrinkTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewNewDrinkIngredientsLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="20dp"
+        android:text="Select drink ingredients:"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNewDrinkName" />
 
     <EditText
         android:id="@+id/editTextNewDrinkName"
         android:layout_width="253dp"
         android:layout_height="43dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="text"
-        app:layout_constraintStart_toStartOf="@+id/textViewNewDrinkTitle"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNewDrinkTitle" />
+        app:layout_constraintStart_toEndOf="@+id/textViewNewDrinkNameLabel"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewIngredientListToCheck"
+        android:layout_width="334dp"
+        android:layout_height="365dp"
+        android:layout_marginTop="16dp"
+        android:overScrollMode="ifContentScrolls"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNewDrinkIngredientsLabel" />
 
     <Button
         android:id="@+id/buttonAddDrinkToLocalDatabase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginTop="20dp"
         android:text="add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientListToCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
