--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
@@ -56,9 +56,9 @@
         android:id="@+id/buttonAddDrinkToLocalDatabase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
+        android:layout_marginStart="144dp"
         android:layout_marginTop="20dp"
-        android:text="add"
+        android:text="next step"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientListToCheck" />
 
