--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink_details.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink_details.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
-        android:text="Description"
+        android:text="Instructions"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNewDrinkDescription"
+        android:id="@+id/editTextNewDrinkInstructions"
         android:layout_width="245dp"
         android:layout_height="89dp"
         android:layout_marginStart="32dp"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNewDrinkDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNewDrinkInstructions" />
 
     <Button
         android:id="@+id/buttonAddDrinkToLocalDatabase"
