--- a/CocktailCatalog/app/src/main/res/layout/row_igredient_measure.xml
+++ b/CocktailCatalog/app/src/main/res/layout/row_igredient_measure.xml
@@ -16,4 +16,22 @@
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textSize="16dp" />
+
+    <EditText
+        android:id="@+id/editTextNewDrinkIngredientMeasure"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="123"
+        android:inputType="number"
+        android:textColor="#FFFFFF"
+        />
+
+    <Spinner
+        android:id="@+id/spinnerUnit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+
 </LinearLayout>
