--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        android:text="Name"
+        android:text="@string/name"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="108dp"
         android:layout_marginTop="20dp"
-        android:text="Select drink ingredients:"
+        android:text="@string/select_drink_ingredients"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="162dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:text="next step"
+        android:text="@string/next_step"
         android:textColor="#000000"
         app:cornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
