--- a/CocktailCatalog/app/src/main/res/navigation/navigation.xml
+++ b/CocktailCatalog/app/src/main/res/navigation/navigation.xml
@@ -75,5 +75,13 @@
         <action
             android:id="@+id/action_localDrinkDetailsFragment_to_favoriteDrinksFragment"
             app:destination="@id/favoriteDrinksFragment" />
+        <action
+            android:id="@+id/action_localDrinkDetailsFragment_to_editDrinkFragment"
+            app:destination="@id/editDrinkFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/editDrinkFragment"
+        android:name="com.example.cocktailcatalog.views.EditDrinkFragment"
+        android:label="fragment_edit_drink"
+        tools:layout="@layout/fragment_edit_drink" />
 </navigation>
