refactor row with ingredient in drink edit

--- a/CocktailCatalog/app/src/main/res/layout/row_ingredient_with_delete.xml
+++ b/CocktailCatalog/app/src/main/res/layout/row_ingredient_with_delete.xml
@@ -3,19 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/text_view_bg"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="3dp">
 
     <TextView
         android:id="@+id/textViewIDName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        android:textSize="16dp" />
+        android:textSize="14dp" />
 
     <ImageButton
         android:id="@+id/buttonDeleteIngredient"
