add navigation after edit drink

--- a/CocktailCatalog/app/src/main/res/navigation/navigation.xml
+++ b/CocktailCatalog/app/src/main/res/navigation/navigation.xml
@@ -83,5 +83,9 @@
         android:id="@+id/editDrinkFragment"
         android:name="com.example.cocktailcatalog.views.EditDrinkFragment"
         android:label="fragment_edit_drink"
-        tools:layout="@layout/fragment_edit_drink" />
+        tools:layout="@layout/fragment_edit_drink" >
+        <action
+            android:id="@+id/action_editDrinkFragment_to_favoriteDrinksFragment"
+            app:destination="@id/favoriteDrinksFragment" />
+    </fragment>
 </navigation>
