--- a/CocktailCatalog/app/src/main/res/layout/fragment_edit_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_edit_drink.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textViewEditDrinkNameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:text="@string/name"
         android:textColor="#FFFFFF"
@@ -22,7 +22,7 @@
         android:id="@+id/editTextEditDrinkName"
         android:layout_width="255dp"
         android:layout_height="45dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="text"
@@ -33,12 +33,11 @@
         android:id="@+id/textViewEditDrinkInstructionLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="40dp"
         android:text="@string/instructions"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textViewEditDrinkNameLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewEditDrinkNameLabel" />
 
     <EditText
@@ -55,8 +54,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="44dp"
         android:text="@string/image_url"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -77,7 +75,6 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="27dp"
         android:text="@string/alcoholic"
         android:textColor="#FFFFFF"
@@ -94,5 +91,25 @@
         app:layout_constraintStart_toStartOf="@+id/editTextEditDrinkImageURL"
         app:layout_constraintTop_toBottomOf="@+id/editTextEditDrinkImageURL"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewIngredientsInDrink"
+        android:layout_width="379dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:overScrollMode="ifContentScrolls"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/buttonSaveEditedFields"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/save"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewIngredientsInDrink"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientsInDrink" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
