--- a/CocktailCatalog/app/src/main/res/layout/fragment_add_drink_details.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_add_drink_details.xml
@@ -75,9 +75,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewIngredientsMeasureEntering"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="16dp"
         android:overScrollMode="ifContentScrolls"
         app:layout_constraintBottom_toTopOf="@+id/buttonAddDrinkToLocalDatabase"
