--- a/CocktailCatalog/app/src/main/res/layout/fragment_edit_drink.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_edit_drink.xml
@@ -95,21 +95,26 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewIngredientsInDrink"
-        android:layout_width="379dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="25dp"
         android:overScrollMode="ifContentScrolls"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSaveEditedFields"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/buttonSaveEditedFields"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="15dp"
         android:text="@string/save"
-        app:layout_constraintStart_toStartOf="@+id/recyclerViewIngredientsInDrink"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientsInDrink" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
