--- a/CocktailCatalog/app/src/main/res/layout/fragment_age_check.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_age_check.xml
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".views.AgeCheckFragment">
 
-   <data>
-
-   </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="113dp"
-        android:padding="10sp"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:text="No"
+        android:padding="10dp"
+        android:paddingStart="45dp"
+        android:paddingEnd="45dp"
+        android:text="@string/no"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_yes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button_yes" />
 
     <TextView
         android:id="@+id/ageQuestionLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="32dp"
         android:text="@string/are_you_over_18_years_old"
         android:textSize="28sp"
@@ -41,19 +36,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button_yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
-        android:padding="10sp"
-        android:paddingLeft="20sp"
-        android:paddingRight="20sp"
-        android:text="Yes"
+        android:padding="10dp"
+        android:paddingStart="45dp"
+        android:paddingEnd="45dp"
+        android:text="@string/yes"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button_no"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ageQuestionLabel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
