Recent drinks fragment and logic

--- a/CocktailCatalog/app/src/main/res/layout/drink_history_fragment.xml
+++ b/CocktailCatalog/app/src/main/res/layout/drink_history_fragment.xml
@@ -6,14 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".views.DrinkHistoryFragment">
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="304dp"
-        android:text="Button"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/nunito_extralight"
+        android:text="@string/recent_drinks"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewRecentDrinks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:overScrollMode="ifContentScrolls"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
