adding drink to favourite, removing drink from favourite, displaying all favourites

--- a/CocktailCatalog/app/src/main/res/layout/fragment_favourite_favourite_drinks.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_favourite_favourite_drinks.xml
@@ -3,12 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.FavouriteFavouriteDrinksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewFavFavDrinks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="FAV" />
+        android:layout_marginTop="15dp"
+        android:overScrollMode="ifContentScrolls"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </FrameLayout>
