Category added to drink details

--- a/CocktailCatalog/app/src/main/res/layout/fragment_drink_details.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_drink_details.xml
@@ -69,8 +69,8 @@
             android:text="@string/ingredients"
             android:textColor="#FFFFFF"
             android:textSize="26sp"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/textViewCategory"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />
 
         <TextView
             android:id="@+id/textViewIngredientsList"
@@ -104,6 +104,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textViewIngredientsList"
             app:layout_constraintTop_toBottomOf="@+id/textViewIngredientsList" />
+
+        <TextView
+            android:id="@+id/textViewCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nunito"
+            android:text="@string/drink_category"
+            android:textColor="#FFFFFF"
+            android:textSize="26sp"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
